--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@ I am applying for <strong>PhD programs in 2026–2027</strong>.
 
 <h3>Infra-Swarm: Robust NIR-Based Multi-Robot Swarming (2023–Present)</h3>
 <p><em>WINDY Lab @ Westlake University</em></p>
+<p style="text-align: center;">
+  <img 
+    src="{{ '/assets/images/research/infra-swarm.jpg' | relative_url }}" 
+    alt="Infra-Swarm near-infrared multi-robot swarming setup" 
+    style="max-width: 600px; width: 100%; border-radius: 8px;"
+  >
+  <br>
+  <span style="font-size: 0.9em; color: #666;">
+    Infra-Swarm: 940nm NIR perception and multi-robot swarming platform.
+  </span>
+</p>
 <ul>
   <li>Designed a full near-infrared (940nm) perception system using custom LED emitters, narrowband filters, and four grayscale cameras for 360° sensing.</li>
   <li>Built a photometric ranging model based on inverse-square law; calibrated using VICON ground truth; achieved centimeter-level accuracy.</li>
@@ -39,6 +50,17 @@ I am applying for <strong>PhD programs in 2026–2027</strong>.
 
 <h3>Bearing-Strength Motion Estimation (2024–Present)</h3>
 <p><em>WINDY Lab @ Westlake University</em></p>
+<p style="text-align: center;">
+  <img 
+    src="{{ '/assets/images/research/bearing-strength.jpg' | relative_url }}" 
+    alt="Bearing-strength motion estimation setup with cameras and IR emitters" 
+    style="max-width: 600px; width: 100%; border-radius: 8px;"
+  >
+  <br>
+  <span style="font-size: 0.9em; color: #666;">
+    Bearing-strength estimation with grayscale cameras and IR emitters.
+  </span>
+</p>
 <ul>
   <li>Proposed a pseudo-linear Kalman filter combining bearing and signal strength through an augmented emitter-power state.</li>
   <li>Derived observability conditions removing the classical lateral-motion requirement in bearing-only estimation.</li>
@@ -48,6 +70,17 @@ I am applying for <strong>PhD programs in 2026–2027</strong>.
 
 <h3>Learning for Real Robots: IL, Diffusion Models, and World Models (2025–Present)</h3>
 <p><em>ICON Lab @ UC Berkeley</em></p>
+<p style="text-align: center;">
+  <img 
+    src="{{ '/assets/images/research/MIMIC-D.jpg' | relative_url }}" 
+    alt="Learning-based control for real robot manipulators" 
+    style="max-width: 600px; width: 100%; border-radius: 8px;"
+  >
+  <br>
+  <span style="font-size: 0.9em; color: #666;">
+    Diffusion-based imitation learning and world models for real robot manipulation.
+  </span>
+</p>
 <ul>
   <li>Developing diffusion-based imitation-learning pipeline for multi-arm planning.</li>
   <li>Building image-to-latent encoders and visual-conditioned generative models.</li>
@@ -55,8 +88,17 @@ I am applying for <strong>PhD programs in 2026–2027</strong>.
   <li>Exploring integration of structured sensing (photometric, bearing-strength) into learning-based planners.</li>
 </ul>
 
-<h3>Voice-LLM Vehicle Control System (2023–2024)</h3>
+<h3>Voice-LLM Vehicle Control System (2023–2024)(In Chinese)</h3>
 <p><em>WINDY Lab @ Westlake University</em></p>
+<p style="text-align: center;">
+  <iframe 
+    src="https://player.bilibili.com/player.html?bvid=BV1RK421C7DF&vd_source=7efacd2eb444aa4c87b35be507842680" 
+    width="100%" 
+    height="400" 
+    frameborder="0" 
+    allowfullscreen
+  ></iframe>
+</p>
 <ul>
   <li>Integrated Whisper STT + GPT-4 for natural-language vehicle control, achieving 92% intent recognition accuracy.</li>
   <li>Developed Unity simulation + deployed on physical mobile robots.</li>
