--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ I am applying for <strong>PhD programs in 2026–2027</strong>.
 <p><em>ICON Lab @ UC Berkeley</em></p>
 <p style="text-align: center;">
   <img 
-    src="{{ '/assets/images/research/MIMIC-D.jpg' | relative_url }}" 
+    src="{{ '/assets/images/research/MIMIC-D.png' | relative_url }}" 
     alt="Learning-based control for real robot manipulators" 
     style="max-width: 600px; width: 100%; border-radius: 8px;"
   >
