update aboutme and Berkeley research

--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@ author_profile: true
 <h2>About Me</h2>
 
 <p>
-I am a third-year undergraduate student at <strong>Westlake University</strong> and a visiting research intern at the 
-<strong>ICON Lab, UC Berkeley</strong>. I work at the intersection of <strong>learning-enhanced autonomous systems</strong>, 
-<strong>structured sensing & estimation</strong>, and <strong>real-world robot learning</strong>.  
-My research focuses on combining physical models (photometric sensing, bearing-strength estimation, observability) 
-with modern generative learning methods (diffusion models, imitation learning, world models) 
-to build autonomous systems that can operate reliably in the real world.
-</p>
+        I am a third-year undergraduate student at <strong>Westlake University</strong>, currently a visiting research student at the <strong>ICON Lab, UC Berkeley</strong>, working with Dr. Negar Mehr. Since my first year, I have been conducting research in the <strong>WINDY Lab</strong> under Prof. Shiyu Zhao.
+    </p>
 
-<p>
-I enjoy research that blends both <strong>clean theory</strong> and <strongreal systems engineering</strong>, 
-from building multi-robot sensing and communication systems, 
-to designing pseudo-linear estimators, to developing learning-based planners for manipulation and multi-agent tasks.  
-I am applying for <strong>PhD programs in 2026–2027</strong>.
-</p>
+    <p>
+        My research focuses on <strong>learning-enhanced autonomous systems</strong>&mdash;methods that combine <em>structured sensing and estimation</em> with <em>modern generative learning</em> to build autonomous robots that operate reliably in the real world. I am especially interested in systems that integrate:
+    </p>
+
+    <ul>
+        <li><strong>structured sensor models</strong> (photometric ranging, bearing-strength estimation),</li>
+        <li><strong>estimation and safety</strong> (pseudo-linear filters, observability), and</li>
+        <li><strong>data-driven planning</strong> (diffusion-based imitation learning, world models).</li>
+    </ul>
+
+    <p>
+        I particularly enjoy research that blends <strong>clear physical models</strong> with <strong>real robotic deployment</strong>. My work spans real-world multi-robot systems (Infra-Swarm), structure-aware estimation methods, and learning-based planners for manipulation and multi-agent tasks.
+    </p>
+
+    <p>
+        I plan to pursue a <strong>PhD in robotics, learning, and autonomy</strong> beginning in 2027.
+    </p>
 
 
 <hr>
