update aboutme and Berkeley research

--- a/index.html
+++ b/index.html
@@ -74,25 +74,52 @@ author_profile: true
   <li><strong>ICRA resubmission in preparation.</strong></li>
 </ul>
 
-<h3>Learning for Real Robots: IL, Diffusion Models, and World Models (2025–Present)</h3>
+<h3>MIMIC-D: Diffusion-based Imitation Learning for Multi-Arm Planning (2025–Present)</h3>
 <p><em>ICON Lab @ UC Berkeley</em></p>
+
 <p style="text-align: center;">
   <img 
     src="{{ '/assets/images/research/MIMIC-D.png' | relative_url }}" 
-    alt="Learning-based control for real robot manipulators" 
+    alt="MIMIC-D diffusion-based IL for manipulation" 
     style="max-width: 600px; width: 100%; border-radius: 8px;"
   >
   <br>
   <span style="font-size: 0.9em; color: #666;">
-    Diffusion-based imitation learning and world models for real robot manipulation.
+    MIMIC-D: Diffusion-based imitation learning for visual-conditioned multi-arm manipulation.
   </span>
 </p>
+
 <ul>
-  <li>Developing diffusion-based imitation-learning pipeline for multi-arm planning.</li>
-  <li>Building image-to-latent encoders and visual-conditioned generative models.</li>
-  <li>Working on world-model training for multi-step prediction under uncertainty.</li>
-  <li>Exploring integration of structured sensing (photometric, bearing-strength) into learning-based planners.</li>
+  <li>Developing <strong>MIMIC-D</strong>, a diffusion-based imitation-learning pipeline for multi-arm manipulation tasks.</li>
+  <li>Building camera-based image-to-latent encoders and conditional diffusion policies for trajectory generation.</li>
+  <li>Implementing dataset preprocessing, training scripts, and policy evaluation protocols.</li>
+  <li>Studying how diffusion models capture multi-modal action distributions in manipulation tasks.</li>
 </ul>
+
+<hr>
+
+<h3>DP-WM: Diffusion Policy + World Models for Real-Robot Planning (2025–Present)</h3>
+<p><em>ICON Lab @ UC Berkeley</em></p>
+
+<p style="text-align: center;">
+  <img 
+    src="{{ '/assets/images/research/DP-WM.png' | relative_url }}" 
+    alt="Diffusion policy combined with world models for planning" 
+    style="max-width: 600px; width: 100%; border-radius: 8px;"
+  >
+  <br>
+  <span style="font-size: 0.9em; color: #666;">
+    World-model–based prediction and long-horizon planning integrated with diffusion policies.
+  </span>
+</p>
+
+<ul>
+  <li>Working on world-model training and evaluation for predictive dynamics and multi-step rollout under uncertainty.</li>
+  <li>Experimenting with video prediction, latent dynamics, and uncertainty-aware planning.</li>
+  <li>Integrating diffusion policies with world models for long-horizon, closed-loop planning.</li>
+  <li>Investigating how structured sensing (photometric ranging, bearing-strength) can serve as inputs to predictive models.</li>
+</ul>
+
 
 <h3>Voice-LLM Vehicle Control System (2023–2024)(In Chinese)</h3>
 <p><em>WINDY Lab @ Westlake University</em></p>
