--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: single
 title: "Haoyu Chen"
 author_profile: true
+header:
+  overlay_image: "/assets/images/hero/haoyu-research.jpg"
+  overlay_filter: 0.35  # 0.0 ~ 1.0, 数值越大越暗
+  caption: "Haoyu Chen — Learning-Enhanced Autonomous Systems"
 ---
 
 <h2>About Me</h2>
