--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@ title: "Haoyu Chen"
 author_profile: true
 header:
   overlay_image: "/assets/images/hero/header.jpg"
-  overlay_filter: 0.35  # 0.0 ~ 1.0, 数值越大越暗
+  overlay_filter: 0.35
   caption: "Haoyu Chen — Learning-Enhanced Autonomous Systems"
 ---
+
+<p style="text-align: center; margin-top: 1.5rem;">
+  <img 
+    src="{{ '/assets/images/hero/header.jpg' | relative_url }}" 
+    alt="Haoyu working on real-robot experiments"
+    style="max-width: 900px; width: 100%; height: auto; border-radius: 10px;"
+  >
+</p>
 
 <h2>About Me</h2>
 
