--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ author_profile: true
 header:
   overlay_image: "/assets/images/hero/header.jpg"
   overlay_filter: 0.35  # 0.0 ~ 1.0, 数值越大越暗
-  overlay_height: 100vh
+  overlay_height: 650px
   caption: "Haoyu Chen — Learning-Enhanced Autonomous Systems"
 ---
 
